OD-10469  Move definition in Swagger to  packages
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@46468 fb2e276d-fae9-0310-b578-b71ac85840b9
